# Simple-CLI

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
cli_tool/: __init__.py  cli.py
cli_tool/commands/: create.py  doc.py  github.py  inst.py  new.py  react.py  structure.py  touch.py
